Add custom bitnami image [sc-12027]

--- a/6.2/debian-10/Dockerfile
+++ b/6.2/debian-10/Dockerfile
@@ -1,4 +1,9 @@
-FROM docker.io/bitnami/minideb:buster
+### custom module block
+FROM redislabs/redisgraph:2.4.12 AS graphmodule
+FROM redislabs/redisearch:2.2.6 AS searchmodule
+### end
+
+FROM docker.io/bitnami/minideb:bullseye
 LABEL maintainer "Bitnami <containers@bitnami.com>"
 
 ENV HOME="/" \
@@ -8,7 +13,7 @@ ENV HOME="/" \
 
 COPY prebuildfs /
 # Install required system packages and dependencies
-RUN install_packages acl ca-certificates curl gzip libc6 libssl1.1 procps tar
+RUN install_packages acl ca-certificates curl gzip libc6 libssl1.1 procps tar libgomp1 # libgomp1 needed for redisgraph
 RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "wait-for-port" "1.0.1-10" --checksum 35c818ba3f4b5aae905959bc7d3a5e81fc63786e3c662b604612c0aa7fcda8fd
 RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "redis" "6.2.6-12" --checksum a7b18fafc557647a0a4d6aa1aad5ecf663e4d152b87162db99dbe8d29b3ec8ef
 RUN . /opt/bitnami/scripts/libcomponent.sh && component_unpack "gosu" "1.14.0-7" --checksum d6280b6f647a62bf6edc74dc8e526bfff63ddd8067dcb8540843f47203d9ccf1
@@ -23,6 +28,12 @@ RUN /opt/bitnami/scripts/redis/postunpack.sh
 ENV APP_VERSION="6.2.6" \
     BITNAMI_APP_NAME="redis" \
     PATH="/opt/bitnami/common/bin:/opt/bitnami/redis/bin:$PATH"
+
+### custom module block
+RUN mkdir /opt/bitnami/redis/modules
+COPY --from=graphmodule /usr/lib/redis/modules/redisgraph.so* /opt/bitnami/redis/modules
+COPY --from=searchmodule /usr/lib/redis/modules/redisearch.so* /opt/bitnami/redis/modules
+### End of
 
 EXPOSE 6379
 
